# waydock

./: pyproject.toml
src/waydock/: __init__.py  cli.py  config.py  constants.py  dock.py  util.py
src/waydock/assets/: config.yaml  styles.css
