[project]
name = "waydock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antrax", email = "fredcox@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
waydock = "waydock:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
